# ezjsonpy

./: .gitignore  README.md  pyproject.toml
docs/: language.md  settings.md
src/easyjsonpy/: exceptions.py
src/ezjsonpy/: __init__.py  config_loader.py  lang_loader.py
tests/: test_config_loader.py  test_lang_loader.py
